--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,11 +14,9 @@ dependencies:
   english_words: ^4.0.0
   provider: ^6.0.0
   cupertino_icons: ^1.0.6
-  video_player: ^2.8.6
   animations: ^2.0.0
-  flutter_localizations:
-    sdk: flutter
-  intl: any
+  get: ^4.6.6
+  get_storage: ^2.1.1
 
 dev_dependencies:
   flutter_test:
@@ -27,5 +25,8 @@ dev_dependencies:
   flutter_lints: ^3.0.0
 
 flutter:
+  assets:
+    - assets/images/
+    - assets/gifs/
   uses-material-design: true
   generate: true
