--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,12 +17,17 @@ dependencies:
   animations: ^2.0.0
   get: ^4.6.6
   get_storage: ^2.1.1
+  drift: ^2.18.0
+  sqlite3_flutter_libs: ^0.5.0
+  path_provider: ^2.0.0
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^3.0.0
+  drift_dev: ^2.18.0
+  build_runner: ^2.4.9
 
 flutter:
   assets:
