--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,9 +18,11 @@ dependencies:
   get: ^4.6.6
   get_storage: ^2.1.1
   drift: ^2.18.0
+  sqlite3: ^2.4.0
   sqlite3_flutter_libs: ^0.5.0
   path_provider: ^2.0.0
   path: ^1.9.0
+  google_generative_ai: ^0.4.1
 
 dev_dependencies:
   flutter_test:
