--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   drift: ^2.18.0
   sqlite3: ^2.4.0
   sqlite3_flutter_libs: ^0.5.0
+  equatable: ^2.0.5
   path_provider: ^2.0.0
   path: ^1.9.0
   google_generative_ai: ^0.4.1
